--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -8,6 +8,7 @@
 # runner = "arm-none-eabi-gdb -q -x openocd.gdb"
 # runner = "gdb-multiarch -q -x openocd.gdb"
 # runner = "gdb -q -x openocd.gdb"
+runner = "probe-run --chip STM32F411VETx"
 
 rustflags = [
   # Previously, the linker arguments --nmagic and -Tlink.x were set here.
